[tool.poetry]
name = "sbim1"
version = "0.1.0"
description = "Salabim exercise 1"
authors = ["François Lefebvre <flefebvre01@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FrankLef/sbim1.git"
repository = "https://github.com/FrankLef/sbim1.git"

[tool.poetry.urls]
Changelog = "https://github.com/FrankLef/sbim1.git/releases"

[tool.poetry.dependencies]
# python changed to allow install of scipy
python = "^3.10.6"
pandas = "^1.5.0"
numpy = "^1.23.3"
pyodbc = "^4.0.34"
dynaconf = "^3.1.11"
rich= "^12.5.1"
typer = "^0.9.0"
tomli = "^2.0.1"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
# numba added to allow poetry add of pyOD
# https://github.com/python-poetry/poetry/issues/6265
numba = "~0.56.0"
pyod = "^1.0.7"
seaborn = "^0.12.2"
salabim = "^24.0.2"
greenlet = "^3.0.3"

[tool.poetry.dev-dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
pythonpath = ["src"]
testpaths = [
    "tests",
    "integration"
]

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ruamel.yaml",
    "io",
    "scipy",
    "dynaconf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
